--- a/ClientApp/src/app/components/home/home.component.html
+++ b/ClientApp/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <!-- product-list.component.html -->
 <div>
   <div class="row row-cols-1 row-cols-md-3 g-4">
-    <div class="col" *ngFor="let product of products">
+    <div class="col" *ngFor="let product of products$ | async">
       <app-product-card [product]="product"></app-product-card>
     </div>
   </div>
