Add search input string based on compound index of MongoDb

--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -4,6 +4,7 @@
   >
     <div class="container">
       <a class="navbar-brand" [routerLink]="['/']">Task1_Marketplace</a>
+      <app-search-bar></app-search-bar>
       <button
         class="navbar-toggler"
         type="button"
